--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .card{
     background-color: white;
-    height: 250px;
+    height: 200px;
     width: 600px;
     border-radius: 5px;
 }
@@ -56,19 +56,72 @@
 
 }
 
-.esq{
+.botao{
+    background-color: #f0edec;
+    width: 100px;
+    height: 30px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    border: 2px solid gray;
+    border-radius: 10px;
+    
+}
+
+.esq{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
 }
 
 .esq img{
-    height: 16px;   
+    height: 16px; 
+    margin-right: 10px;
+    margin-left: 5px; 
+}
+
+.dir{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.select-estiloso{
+    overflow: hidden;
+    border: none;
+    background-color: #f0edec;
+    border-radius: 10px;
 }
 
 .corpo{
     height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 13px;
+    margin: 0 20px;
 }
 
 .rodape{
     height: 20%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.usuario{
+    
+}
+
+.circulo{
+    background-color: aqua;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    border: 1px solid gray;
 }
